--- a/analysis/reports/statevars.Rmd
+++ b/analysis/reports/statevars.Rmd
@@ -35,3 +35,24 @@ statevar_plot <- ggplot(data = all_dat, aes(x = nspp, y = nind, label = year, co
 statevar_plot
 
 ```
+
+```{r get smaller years}
+
+small_years <- all_dat %>%
+  filter(nspp <= 25,
+         nind <= 10000) %>%
+  group_by(year) %>%
+  summarize(nb_seasons = n()) %>%
+  ungroup() %>%
+  filter(nb_seasons == 2)
+
+small_years_dat <- all_dat %>%
+  filter(year %in% small_years$year)
+
+small_statevar_plot <- ggplot(data = small_years_dat, aes(x = nspp, y = nind, label = year, color = season)) +
+  geom_label() +
+  theme_bw() +
+  scale_color_viridis_d(end = .6)
+
+small_statevar_plot
+```
