--- a/analysis/reports/skewness.Rmd
+++ b/analysis/reports/skewness.Rmd
@@ -142,3 +142,131 @@ skew_ns <- ggplot(data = obs_sn, aes (x = nind / nspp, y = skew_percentile, colo
 
 gridExtra::grid.arrange(grobs = list(skew_s, skew_n, skew_ns), ncol = 1)
 ```
+
+
+```{r distload stuff}
+loadd(cd_long_df, cache = cache)
+loadd(cds_df, cache = cache)
+
+cds_df <- cds_df %>%
+  select(-abund, -rank) %>%
+  distinct()
+```
+
+### Distribution of centroid distances
+```{r distance violins, fig.height = 10, fig.width = 6} 
+
+dist_violins <- ggplot(data = cds_df, aes(x = 0, y = centroid_dist)) +
+  geom_violin(data = filter(cds_df, source == "sampled"),  aes(x = 0, y = centroid_dist, color = season)) +
+  geom_point(data = filter(cds_df, source == "observed"),  aes(x = 0, y = centroid_dist, color = season)) +
+  facet_grid(rows = vars(year), cols = vars(season), switch = "y") +
+  scale_color_viridis_d(end = .8, direction = -1) +
+  theme_bw()
+
+dist_violins
+```
+
+### Heatmaps 
+
+```{r distheatmap of fs, fig.height = 20, fig.width = 10}
+
+ranked_cds_df <- cds_df %>%
+  filter(source == "sampled") %>%
+  group_by(year, season, treatment) %>%
+  arrange(centroid_dist) %>%
+  mutate(dist_rank = row_number()) %>%
+  mutate(dist_percentile = 100*(dist_rank / max(dist_rank))) %>%
+  ungroup() 
+
+observed_percentile <- cds_df %>%
+  filter(source == "observed")
+
+observed_percentile$dist_percentile <- NA
+
+for(i in 1:nrow(observed_percentile)) {
+  this_pool <- filter(ranked_cds_df, year == observed_percentile$year[i],
+                      season == observed_percentile$season[i])
+  
+  this_rank <-max(filter(this_pool, centroid_dist <= observed_percentile$centroid_dist[i])$dist_rank)
+  
+  observed_percentile$dist_percentile[i] = 100 * (this_rank / nrow(this_pool))
+}
+
+ranked_cds_df <- bind_rows(ranked_cds_df, observed_percentile)
+
+ranked_cd_long <- cd_long_df %>%
+  filter(year != 2009) %>%
+  left_join(ranked_cds_df, by = c("sim", "source", "season", "year", "treatment"))
+
+cd_labels <- ranked_cd_long %>%
+  group_by(year, season, treatment) %>%
+  mutate(rank_y = .75 * max(abund)) %>%
+  ungroup() %>%
+  filter(source == "observed") %>%
+  group_by(year, season, treatment) %>%
+  filter(rank == floor(median(rank))) %>%
+  ungroup()
+
+dist_heatmaps <- ggplot(data = ranked_cd_long, aes(x = rank, y = abund, color = dist_percentile)) +
+  geom_line(data = filter(ranked_cd_long, source == "sampled"), aes(x = rank, y = abund, color = dist_percentile, group = sim), alpha = .05) +
+  geom_point(data = filter(ranked_cd_long, source == "observed"), aes(x = rank, y = abund, color = dist_percentile)) + 
+  geom_label(data = cd_labels, aes(x = rank, y = rank_y, color = dist_percentile, label = paste0("Obs. %ile: ", signif(dist_percentile, digits = 3))), nudge_x = .25) +
+  facet_wrap(facets = c("season", "year"), ncol = 2, strip.position = "top", scales = "free", dir = "v") +
+  theme_bw() +
+  scale_color_viridis_c(option = "plasma", end = .7)
+
+dist_heatmaps
+
+```
+
+### Relating observed centroid distance to S and N
+```{r distobs S and N, fig.height = 12, fig.width = 5}
+
+obs_sn_dist <- ranked_cd_long %>%
+  filter(source == "observed") %>%
+  group_by(season, year, treatment, dist_percentile) %>%
+  summarize(nind = sum(abund),
+            nspp = max(rank)) %>%
+  ungroup() %>%
+  mutate(year = as.factor(year))
+
+
+dist_s <-ggplot(data = obs_sn_dist, aes (x =nspp, y = dist_percentile, color = year)) +
+  geom_point() +
+  theme_bw() +
+  scale_color_viridis_d(end = .7) +
+  ggtitle("Centroid dist vs N / S")
+  ggtitle("Centroid distance vs S")
+
+dist_n <- ggplot(data = obs_sn_dist, aes (x = nind, y = dist_percentile, color = year)) +
+  geom_point() +
+  theme_bw() +
+  scale_color_viridis_d(end = .7) +
+  ggtitle("Centroid distance vs N")
+
+dist_ns <- ggplot(data = obs_sn_dist, aes (x = nind / nspp, y = dist_percentile, color = year)) +
+  geom_point() +
+  theme_bw() +
+  scale_color_viridis_d(end = .7) +
+  ggtitle("Centroid distance vs N / S")
+
+gridExtra::grid.arrange(grobs = list(dist_s, dist_n, dist_ns), ncol = 1)
+```
+
+### Skewness vs distance
+
+```{r skew v dist, fig.height = 20, fig.width = 10}
+
+skew_dist <- left_join(ranked_skew_df, ranked_cds_df, by = c("sim", "source", "season", "year", "treatment"))
+
+
+skew_dist_plot <- ggplot(data = skew_dist, aes(x = skew_percentile, y = dist_percentile, color = source)) +
+  geom_point(alpha = .01) +
+  geom_point(data = filter(skew_dist, source == "observed"), aes(x = skew_percentile, y = dist_percentile)) +
+  theme_bw() + 
+  facet_wrap(facets = c("season", "year"), ncol = 2, strip.position = "top", scales = "free", dir = "v") +
+  scale_color_viridis_d(option = "magma", end = .7)
+  
+
+skew_dist_plot
+```
