--- a/analysis/reports/skewness.Rmd
+++ b/analysis/reports/skewness.Rmd
@@ -126,7 +126,7 @@ skew_s <-ggplot(data = obs_sn, aes (x =nspp, y = skew_percentile, color = year))
   theme_bw() +
   scale_color_viridis_d(end = .7) +
   ggtitle("Skewness vs N / S")
-  ggtitle("Skewness vs S")
+ggtitle("Skewness vs S")
 
 skew_n <- ggplot(data = obs_sn, aes (x = nind, y = skew_percentile, color = year)) +
   geom_point() +
@@ -166,7 +166,7 @@ dist_violins <- ggplot(data = cds_df, aes(x = 0, y = centroid_dist)) +
 dist_violins
 ```
 
-### Heatmaps 
+### Heatmaps of distance to centroid
 
 ```{r distheatmap of fs, fig.height = 20, fig.width = 10}
 
@@ -236,7 +236,7 @@ dist_s <-ggplot(data = obs_sn_dist, aes (x =nspp, y = dist_percentile, color = y
   theme_bw() +
   scale_color_viridis_d(end = .7) +
   ggtitle("Centroid dist vs N / S")
-  ggtitle("Centroid distance vs S")
+ggtitle("Centroid distance vs S")
 
 dist_n <- ggplot(data = obs_sn_dist, aes (x = nind, y = dist_percentile, color = year)) +
   geom_point() +
@@ -266,7 +266,68 @@ skew_dist_plot <- ggplot(data = skew_dist, aes(x = skew_percentile, y = dist_per
   theme_bw() + 
   facet_wrap(facets = c("season", "year"), ncol = 2, strip.position = "top", scales = "free", dir = "v") +
   scale_color_viridis_d(option = "magma", end = .7)
-  
+
 
 skew_dist_plot
+```
+
+### Heatmaps of coeffs
+
+```{r coeffs heatmaps, fig.height = 20, fig.width = 10}
+
+coeffs_objs_names <- cached(cache = cache)
+
+coeffs_objs_names <- coeffs_objs_names[which(substr(coeffs_objs_names, 1, 6) == "coeffs")]
+
+coeffs_list <- list() 
+
+for(i in 1:length(coeffs_objs_names)) {
+  coeffs_list[[i]] <- readd(coeffs_objs_names[i], character_only = T, cache = cache)
+  
+  cs_name <- strsplit(coeffs_objs_names[i], "_")[[1]]
+  
+  coeffs_list[[i]] <- mutate(coeffs_list[[i]], 
+                             year =as.numeric(cs_name[4]),
+                             season =cs_name[5],
+                             treatment =cs_name[6],
+                             source = ifelse(sim < 0, "observed", "sampled"))
+}
+
+coeffs_df <- bind_rows(coeffs_list) %>%
+  left_join(skew_dist, by = c("sim", "year", "season", "treatment", "source")) %>%
+  mutate(parameter = factor(parameter, levels =  c("intercept", "leg_matrix1", 
+                                          "leg_matrix2",  "leg_matrix3",  "leg_matrix4" , "leg_matrix5" ,
+ "leg_matrix6" , "leg_matrix7",  "leg_matrix8",  "leg_matrix9" , "leg_matrix10" )))
+
+coeff_labels <- coeffs_df %>%
+  group_by(year, season, treatment) %>%
+  mutate(rank_y = .2 * max(value)) %>%
+  ungroup() %>%
+  filter(source == "observed") %>%
+  group_by(year, season, treatment) %>%
+  filter(parameter == "intercept") %>%
+  ungroup()
+
+dist_coeffs_heatmap <- ggplot(data = coeffs_df, aes(x = parameter, y = value, color = dist_percentile)) +
+  geom_line(data = filter(coeffs_df, source == "sampled"), aes(x = parameter, y = value, color = dist_percentile, group = sim), alpha = .05) +
+  geom_point(data = filter(coeffs_df, source == "observed"), aes(x = parameter, y = value, color = dist_percentile)) + 
+  facet_wrap(facets = c("season", "year"), ncol = 2, strip.position = "top", scales = "free", dir = "v") +
+  theme_bw() +
+   geom_label(data = coeff_labels, aes(x =parameter, y = rank_y, color = dist_percentile, label = paste0("Obs. %ile: ", signif(dist_percentile, digits = 3))), nudge_x = .25) +
+  scale_color_viridis_c(option = "plasma", end = .7) +
+  ggtitle("Heatmap of coefficients x distance to centroid")
+
+dist_coeffs_heatmap
+
+
+skew_coeffs_heatmap <- ggplot(data = coeffs_df, aes(x = parameter, y = value, color = skew_percentile)) +
+  geom_line(data = filter(coeffs_df, source == "sampled"), aes(x = parameter, y = value, color = skew_percentile, group = sim), alpha = .05) +
+  geom_point(data = filter(coeffs_df, source == "observed"), aes(x = parameter, y = value, color = skew_percentile)) + 
+  facet_wrap(facets = c("season", "year"), ncol = 2, strip.position = "top", scales = "free", dir = "v") +
+  theme_bw()  +
+   geom_label(data = coeff_labels, aes(x =parameter, y = rank_y, color = skew_percentile, label = paste0("Obs. %ile: ", signif(skew_percentile, digits = 3))), nudge_x = .25) +
+  scale_color_viridis_c(option = "plasma", end = .7) +
+  ggtitle("Heatmap of coefficients x skewness")
+
+skew_coeffs_heatmap
 ```
