--- a/analysis/reports/dis.Rmd
+++ b/analysis/reports/dis.Rmd
@@ -225,3 +225,31 @@ statevars_pc_large
 
 ```
 
+```{r do simpson and skewness give the same answers}
+
+simp_skew <- ranked_di_df %>%
+  group_by(season, year, treatment, di_name) %>%
+  mutate(ndraws = n() - 1) %>%
+  ungroup() %>%
+  filter(source == "observed") %>%
+  mutate(alpha = max(0.05, ndraws / max(ndraws)))
+
+simp_skew_percentile_plot <- ggplot(data = simp_skew, aes(x = skew_percentile, y = simpson_percentile, color = season, alpha = alpha)) +
+  geom_point() +
+  geom_abline(slope = -1, intercept = 100) +
+  theme_bw() +
+  scale_color_viridis_d(end = .8)
+
+simp_skew_percentile_plot
+
+simp_skew_percentile_plot_zoomed <- simp_skew_percentile_plot +
+  xlim(80, 100) +
+  ylim(0, 20)
+
+simp_skew_percentile_plot_zoomed
+
+sum(simp_skew$simpson_percentile == 0)
+sum(simp_skew$skew_percentile == 100, na.rm = T)
+```
+
+There's _some_ relationship, but Simpson's drives to zero much earlier than the skewness percentile gets to 100. This squares with violin plots from earlier. Simpson's is not as sensitive/nuanced as the skewness is. 
